# zk-oracles

./: Cargo.toml  README.md
circuit/: Cargo.toml
circuit/benches/: circuit_eval.rs
circuit/src/: errors.rs  gate.rs  lib.rs  load.rs
crypto_core/: Cargo.toml  build.rs
crypto_core/benches/: aes128.rs  aes256.rs  block.rs  hash_aes.rs  rand_aes.rs
crypto_core/ctrans/: transpose.c
crypto_core/examples/: netio.rs
crypto_core/src/: block.rs  cointoss.rs  commitment.rs  hash_aes.rs  lib.rs  prg.rs  rand_aes.rs  utils.rs
crypto_core/src/aes/: aes128.rs  aes256.rs  mod.rs
crypto_core/src/channel/: local_channel.rs  mod.rs  net_channel.rs
doc/: book.toml  macros.txt
doc/src/: README.md  SUMMARY.md
doc/src/primitives/: 2pc.md  baseot.md  basics.md  fkaes.md  freexor.md  gc.md  halfgate.md  izk.md  ot.md  ote.md  overview.md  pap.md  row_reduction.md  rr.md
doc/src/zkoracles/: aes-gcm.md  chacha20.md  commit.md  handshake.md  nota_format.md  overview.md  proofgen.md  query.md
notary/: Cargo.toml
notary/src/: lib.rs  notary_file.rs
twopc/: Cargo.toml
twopc/benches/: garble.rs
twopc/examples/: demo.rs  ot.rs
twopc/src/: lib.rs  twopc_prot.rs
twopc/src/garble/: gc.rs  mod.rs
twopc/src/garble/generator/: half_gate_gen.rs  mod.rs
twopc/src/grable/: gc.rs  mod.rs
twopc/src/grable/evaluator/: half_gate_eval.rs  mod.rs
twopc/src/grable/generator/: half_gate_gen.rs  mod.rs
twopc/src/ot/: co.rs  errors.rs  kos.rs  mod.rs
