[package]
edition = "2021"
name = "circuit"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto_core = {path = "../crypto_core"}
thiserror = "1.0.30"
regex = "1.6.0"
anyhow = "1.0.60"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "circuit_eval"
harness = false