[package]
name = "crypto_core"
version = "0.1.0"
authors = ["Xiang Xie <xiang@o1labs.org>"]
license = "MIT"
edition = "2021"


[dependencies]
rand = "0.7"
rand_core = "0.5"
serde = { version = "1", features = ["derive"]}
once_cell = "1.12.1"
aes = "0.8.1"
cipher = "0.4.3"
structopt = "0.3.20"
curve25519-dalek = "3"


[features]

[dev-dependencies]
criterion = "0.3.6"
hex = "0.4.3"
aes = "0.8.1"

[[bench]]
name = "aes128"
harness = false

[[bench]]
name = "block"
harness = false

[[bench]]
name = "hash_aes"
harness = false

[[bench]]
name = "rand_aes"
harness = false

[[example]]
name = "netio"
path = "examples/netio.rs"