[package]
authors = ["Xiang Xie <xiang@o1labs.org>"]
edition = "2021"
license = "MIT"
name = "crypto_core"
version = "0.1.0"

[dependencies]
aes = "0.8.1"
cipher = "0.4.3"
curve25519-dalek = {version = "4.0.0-rc.1", features = ["rand_core"]}
once_cell = "1.12.1"
rand = "0.8.0"
rand_core = { version = "0.6.0" }
serde = {version = "1", features = ["derive"]}
sha2 = "0.10.0"
structopt = "0.3.20"

[build-dependencies]
cc = "1.0"

[features]

[dev-dependencies]
aes = "0.8.1"
criterion = "0.3.6"
hex = "0.4.3"

[[bench]]
harness = false
name = "aes128"

[[bench]]
harness = false
name = "block"

[[bench]]
harness = false
name = "hash_aes"

[[bench]]
harness = false
name = "rand_aes"

[[example]]
name = "netio"
path = "examples/netio.rs"
