[package]
name = "twopc"
version = "0.1.0"
authors = ["Xiang Xie <xiang@o1labs.org>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto_core = {path = "../crypto_core"}
circuit = {path = "../circuit"}
thiserror = "1.0.32"
rand = "0.7"
rand_core = "0.5"
curve25519-dalek = "3"
sha2 = "0.10.6"

[dev-dependencies]
criterion = "0.3.6"
structopt = "0.3.26"
mina-curves = {git = "https://github.com/o1-labs/proof-systems"}
poly-commitment = {git = "https://github.com/o1-labs/proof-systems"}
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-ff = { version = "0.3.0", features = ["parallel", "asm"] }
ark-poly = { version = "0.3.0", features = ["parallel"] }
ark-serialize = { version = "0.3.0" }

[[bench]]
name = "garble"
harness = false

[[example]]
name = "ot"
path = "examples/ot.rs"
